k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: greenservice
spec:
  selector:
    app: greenservice
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: blueservice
spec:
  selector:
    app: blueservice
  ports:
  - port: 80
    targetPort: 80
