k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servicesingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /green
        backend:
          service:
            name: greenservice
            port: 
              number: 80
  - http:
      paths:
      - pathType: Prefix
        path: /blue
        backend:
          service:
            name: blueservice
            port: 
              number: 80
